Création du bundle User

--- a/src/EasyRoom/AppBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/EasyRoom/AppBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -87,3 +87,6 @@ form:
     lastname: 'Nom'
     firstname: 'Prénom'
     roles: 'Rôle'
+roles:
+    user: 'Rôle utilisateur'
+    admin: 'Rôle administrateur'
